fixed offcanvas jump bug

--- a/mamadata_rails4/app/assets/stylesheets/_side.scss
+++ b/mamadata_rails4/app/assets/stylesheets/_side.scss
@@ -63,3 +63,8 @@ ul.off-canvas-list li a {
   border-bottom: 0px;
   padding: 20px;
 }
+
+#content {
+//  @include single-transition(opacity, 0.2s);
+  opacity: 0;
+}
